tests/expectations/parser-expression/expression/literal/scalar_hexbin_fail.out
Error [EPAR0370042]: Hex, octal, and binary literals may only be used for integer types.
    --> test_0:1:1
     |
   1 | 0xAAscalar
     | ^^^^
Error [EPAR0370042]: Hex, octal, and binary literals may only be used for integer types.
    --> test_1:1:1
     |
   1 | 0b10scalar
     | ^^^^
